[gd_scene load_steps=7 format=2]

[ext_resource path="res://theme-default.tres" type="Theme" id=1]
[ext_resource path="res://components/tooltip.gd" type="Script" id=2]
[ext_resource path="res://art-built/9patch/panel-9patch.png" type="Texture2D" id=3]
[ext_resource path="res://art-built/panel-triangle.png" type="Texture2D" id=4]

[sub_resource type="Animation" id=1]

resource_name = "appear"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("background:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("background:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 120 ), Vector2( 0, 100 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "disappear"
length = 0.1
loop = false
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("background:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 100 ), Vector2( 0, 100 ) ]
}

[node name="tooltip" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Rect", "Theme" ]
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [ 270.0 ]
}
text = ""
x = 0
y = 0

[node name="background" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_top = 100.0
offset_bottom = 400.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="nine_patch_rect" type="NinePatchRect" parent="background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11
_sections_unfolded = [ "Anchor", "Axis Stretch", "Margin", "Patch Margin", "Rect" ]

[node name="rich_text_label" type="RichTextLabel" parent="background/nine_patch_rect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
text = "I am a [b]bold[/b] one.
This text is [i]rich[/i]. Look at it flow! Wooow hahahaha. Desu desu"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "I am a bold one.
This text is rich. Look at it flow! Wooow hahahaha. Desu desu"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="triangle" type="TextureRect" parent="background" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 259.0
offset_top = -27.0
offset_right = 280.0
offset_bottom = -7.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="animation_player" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/appear = SubResource( 1 )
anims/disappear = SubResource( 2 )
blend_times = [  ]

[connection signal="gui_input" from="." to="." method="_gui_event"]


